2008-04-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.h, itpp/base/itcompat.h, itpp/base/itfile.h,
	itpp/base/ittypes.h, itpp/base/sources.mk, itpp/fixed/fix_base.h,
	itpp/itbase.h, win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj:
	Rename ittypes.h to itcompat.h

	Beside fixed size integer type definitions, the new file
	itcompat.h will include all conditional implementations of
	functions, which are non available on various platforms and
	compilers, e.g. std::isfinite() or expm1().

2008-04-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* README, doc/local/index.doc.in: Reworded and rearranged the
	brief description of the IT++ library

	Thanks to Kumar Appaiah for some language suggestions.

-------------------------------------------------------------------------------

2008-03-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.4 release (SVN tag: release-4-0-4)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.4

	* win32/itpp_acml_tests/Makefile.am,
	win32/itpp_mkl_tests/Makefile.am: Add converters_test.vcproj to
	EXTRA_DISTS variable of Makefiles

	Without this patch, the project files for converters_test were not
	included in the distribution package.

2008-03-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp: Remove setf(ios::scientific) and
	setf(ios::fixed) from itfile_test.cpp

	These two formatting options causes broken output of
	floating-point data when using MSVC++ Express 2008. In spite of
	the fact that this seems to be a bug in MSVC++ Express 2008,
	removal of these formatting options fixes this problem.

2008-03-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp, tests/itfile_test_data.it: Improve
	itfile_test by using a non-continuous reference data file

	Such a data file is prepared by first saving a longer data structure
	(ivec in this case), then deleting it and finally saving a shorter
	data structure in the same place.
